Fix z-index of sidebar open button and zoom controls

--- a/assets/less/designer.less
+++ b/assets/less/designer.less
@@ -37,7 +37,7 @@ body {
 }
 
 .designer__zoom-controls {
-  z-index:100;
+  z-index: 1;
   position: fixed;
   right: 420px;
   bottom: 20px;
@@ -85,34 +85,4 @@ body {
   margin: 0;
 
   background: #DADADA;
-}
-
-.sidebar__expand-button {
-  z-index:100;
-  top: 40%;
-  right: 400px;
-
-  height: 40px;
-  margin-top: 13px;
-  padding: 0px 13px;
-
-  color: #737373;
-  background-color: white;
-
-  border: 1px solid #c5c5c5;
-  border-right: none;
-
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
-
-  position: fixed;
-
-  -webkit-transition: all 0.2s;
-          transition: all 0.2s;
-}
-
-.sidebar__expand-button--closed {
-  right: 0;
 }
